--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "genius-car-mechanics-server",
+  "name": "genius-car-mechanics-server-module-65",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,13 +8,21 @@
     "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ProgrammingHero1/genius-car-mechanics-server-module-65.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ProgrammingHero1/genius-car-mechanics-server-module-65/issues"
+  },
+  "homepage": "https://github.com/ProgrammingHero1/genius-car-mechanics-server-module-65#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^4.1.3"
+    "mongodb": "^4.1.3",
+    "nodemon": "^2.0.14"
   }
 }
